--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,10 @@
         <sl4j.version>1.7.7</sl4j.version>
         <logback.version>1.1.2</logback.version>
         <logback.core.version>1.1.2</logback.core.version>
-        <audit.model.version>2.0.5</audit.model.version>
-        <usm4uvms.version>2.0.11</usm4uvms.version>
-        <config.model.version>2.0.5</config.model.version>
+        <audit.model.version>2.0.7-SNAPSHOT</audit.model.version>
+        <usm4uvms.version>2.0.15</usm4uvms.version>
+        <config.model.version>2.0.7-SNAPSHOT</config.model.version>
+        <project.scm.id>github</project.scm.id>
     </properties>
 
     <dependencies>
@@ -102,6 +103,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.5.3</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-provider-gitexe</artifactId>
+                        <version>1.8.1</version>
+                    </dependency>
+                </dependencies>
 			</plugin>
         </plugins>
     </build>
