--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <release.branch.name>uvms-2.0.6-kili</release.branch.name>
+        <release.branch.name>uvms-git-test</release.branch.name>
         <mockito.version>1.9.5</mockito.version>
         <junit.version>4.10</junit.version>
         <javaee.version>7.0</javaee.version>
@@ -17,9 +17,9 @@
         <sl4j.version>1.7.7</sl4j.version>
         <logback.version>1.1.2</logback.version>
         <logback.core.version>1.1.2</logback.core.version>
-        <audit.model.version>2.0.7-SNAPSHOT</audit.model.version>
+        <audit.model.version>2.0.7</audit.model.version>
         <usm4uvms.version>2.0.15</usm4uvms.version>
-        <config.model.version>2.0.7-SNAPSHOT</config.model.version>
+        <config.model.version>2.0.7</config.model.version>
         <project.scm.id>github</project.scm.id>
     </properties>
 
