Removed internal queue Access db through ejb

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -48,6 +48,12 @@
             <version>${audit.model.version}</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>config-dbaccess-api</artifactId>
+            <version>${config.model.version}</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
