--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
         <sl4j.version>1.7.7</sl4j.version>
         <logback.version>1.1.2</logback.version>
         <logback.core.version>1.1.2</logback.core.version>
-        <audit.model.version>2.0.7-SNAPSHOT</audit.model.version>
-        <usm4uvms.version>2.0.15</usm4uvms.version>
-        <config.model.version>2.0.7-SNAPSHOT</config.model.version>
+        <audit.model.version>2.0.8-SNAPSHOT</audit.model.version>
+        <usm4uvms.version>2.0.14-SNAPSHOT</usm4uvms.version>
+        <config.model.version>2.0.8-SNAPSHOT</config.model.version>
         <project.scm.id>github</project.scm.id>
     </properties>
 
