--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
         <sl4j.version>1.7.7</sl4j.version>
         <logback.version>1.1.2</logback.version>
         <logback.core.version>1.1.2</logback.core.version>
-        <audit.model.version>2.0.7-SNAPSHOT</audit.model.version>
+        <audit.model.version>2.0.7</audit.model.version>
         <usm4uvms.version>2.0.15</usm4uvms.version>
-        <config.model.version>2.0.7-SNAPSHOT</config.model.version>
+        <config.model.version>2.0.7</config.model.version>
         <project.scm.id>github</project.scm.id>
     </properties>
 
@@ -30,8 +30,6 @@
             <version>${javaee.version}</version>
             <scope>provided</scope>
         </dependency>
-
-        
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -47,8 +45,6 @@
             <artifactId>logback-core</artifactId>
             <version>${logback.core.version}</version>
         </dependency>
-
-        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -86,8 +82,8 @@
 
     <scm>
         <connection>scm:git:https://github.com/UnionVMS/UVMS-ConfigModule-APP.git</connection>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <build>
         <plugins>
@@ -100,10 +96,10 @@
                     <outputDirectory>target/dir</outputDirectory>
                 </configuration>
             </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.3</version>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.apache.maven.scm</groupId>
@@ -111,13 +107,13 @@
                         <version>1.8.1</version>
                     </dependency>
                 </dependencies>
-			</plugin>
+            </plugin>
         </plugins>
     </build>
-  <modules>
-    <module>rest</module>
-    <module>service</module>
-    <module>message</module>
-    <module>module</module>
-  </modules>
+    <modules>
+        <module>rest</module>
+        <module>service</module>
+        <module>message</module>
+        <module>module</module>
+    </modules>
 </project>
