--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <release.branch.name>uvms-2.0.6-kili</release.branch.name>
+        <release.branch.name>uvms-2.1.0-jessamine-boffin</release.branch.name>
         <mockito.version>1.9.5</mockito.version>
         <junit.version>4.10</junit.version>
         <javaee.version>7.0</javaee.version>
@@ -18,9 +18,9 @@
         <logback.version>1.1.2</logback.version>
         <logback.core.version>1.1.2</logback.core.version>
 
-        <usm4uvms.version>2.1.0-SNAPSHOT</usm4uvms.version>
-        <audit.model.version>2.1.0-SNAPSHOT</audit.model.version>
-        <config.model.version>2.1.0-SNAPSHOT</config.model.version>
+        <usm4uvms.version>2.1.0</usm4uvms.version>
+        <audit.model.version>2.1.0</audit.model.version>
+        <config.model.version>2.1.0</config.model.version>
 
         <project.scm.id>github</project.scm.id>
     </properties>
