--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <logback.version>1.1.2</logback.version>
         <logback.core.version>1.1.2</logback.core.version>
 
-        <usm4uvms.version>2.1.2</usm4uvms.version>
+        <usm4uvms.version>2.1.4-SNAPSHOT</usm4uvms.version>
         <audit.model.version>2.1.1</audit.model.version>
         <config.model.version>2.1.1</config.model.version>
         <uvms.common.version>2.0.13</uvms.common.version>
