--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
     <artifactId>config</artifactId>
-    <version>2.1.3-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Maven projekt-archetype for UnionVms modules</description>
 
@@ -18,10 +18,10 @@
         <logback.version>1.1.2</logback.version>
         <logback.core.version>1.1.2</logback.core.version>
 
-        <usm4uvms.version>2.1.4-SNAPSHOT</usm4uvms.version>
-        <audit.model.version>2.1.1</audit.model.version>
-        <config.model.version>2.1.1</config.model.version>
-        <uvms.common.version>2.0.13</uvms.common.version>
+        <usm4uvms.version>3.0.0-SNAPSHOT</usm4uvms.version>
+        <audit.model.version>3.0.0-SNAPSHOT</audit.model.version>
+        <config.model.version>3.0.0-SNAPSHOT</config.model.version>
+        <uvms.common.version>2.0.14-SNAPSHOT</uvms.common.version>
 
         <project.scm.id>github</project.scm.id>
     </properties>
