--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <release.branch.name>uvms-2.1.3-morgoth</release.branch.name>
+        <release.branch.name>uvms-3.0.0-boba-fett</release.branch.name>
         <mockito.version>1.9.5</mockito.version>
         <junit.version>4.10</junit.version>
         <javaee.version>7.0</javaee.version>
@@ -18,10 +18,10 @@
         <logback.version>1.1.2</logback.version>
         <logback.core.version>1.1.2</logback.core.version>
 
-        <usm4uvms.version>3.0.0-SNAPSHOT</usm4uvms.version>
-        <audit.model.version>3.0.0-SNAPSHOT</audit.model.version>
-        <config.model.version>3.0.0-SNAPSHOT</config.model.version>
-        <uvms.common.version>2.0.14-SNAPSHOT</uvms.common.version>
+        <usm4uvms.version>3.0.0</usm4uvms.version>
+        <audit.model.version>3.0.0</audit.model.version>
+        <config.model.version>3.0.0</config.model.version>
+        <uvms.common.version>2.0.14</uvms.common.version>
 
         <project.scm.id>github</project.scm.id>
     </properties>
