--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>fish.focus.uvms.maven</groupId>
+		<artifactId>uvms-pom</artifactId>
+		<version>1.8</version>
+	</parent>
+
     <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
     <artifactId>config</artifactId>
     <version>3.0.6-SNAPSHOT</version>
@@ -10,18 +16,18 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <release.branch.name>uvms-3.0.5-C3PO</release.branch.name>
-        <mockito.version>1.9.5</mockito.version>
-        <junit.version>4.10</junit.version>
+        <mockito.version>1.10.16</mockito.version>
+        <junit.version>4.12</junit.version>
         <javaee.version>7.0</javaee.version>
         <swagger.version>1.3.1</swagger.version>
         <sl4j.version>1.7.7</sl4j.version>
         <logback.version>1.1.2</logback.version>
         <logback.core.version>1.1.2</logback.core.version>
 
-        <usm4uvms.version>3.0.4</usm4uvms.version>
+        <usm4uvms.version>3.0.5</usm4uvms.version>
         <audit.model.version>3.0.4</audit.model.version>
         <config.model.version>3.0.4</config.model.version>
-        <uvms.common.version>2.0.17</uvms.common.version>
+        <uvms.common.version>2.0.25</uvms.common.version>
 
         <project.scm.id>github</project.scm.id>
     </properties>
@@ -66,7 +72,7 @@
         <repository>
             <id>focus-repo</id>
             <name>Focus nexus repository</name>
-            <url>http://nexus.focus.fish/</url>
+            <url>http://nexus.focus.fish/nexus/</url>
         </repository>
     </repositories>
 
@@ -88,31 +94,6 @@
       <tag>HEAD</tag>
   </scm>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.4</version>
-                <configuration>
-                    <goalPrefix>plugin</goalPrefix>
-                    <outputDirectory>target/dir</outputDirectory>
-                </configuration>
-            </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.3</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.8.1</version>
-                    </dependency>
-                </dependencies>
-			</plugin>
-        </plugins>
-    </build>
   <modules>
     <module>rest</module>
     <module>service</module>
