--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -15,6 +15,11 @@
     <dependencies>
         <!-- EJB DEPENDENCS -->
         <dependency>
+			<groupId>fish.focus.uvms.maven</groupId>
+			<artifactId>uvms-pom-monitoring-deps</artifactId>
+			<type>pom</type>
+		</dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>config-service</artifactId>
             <version>${project.parent.version}</version>
@@ -27,7 +32,7 @@
             <exclusions>
             	<exclusion>
             		<groupId>eu.europa.ec.fisheries.uvms</groupId>
-    				<artifactId>uvms-commons</artifactId>            		
+    				<artifactId>uvms-commons</artifactId>
             	</exclusion>
             </exclusions>
         </dependency>
@@ -109,6 +114,6 @@
                 </plugins>
             </build>
         </profile>
-    </profiles> 
+    </profiles>
 
 </project>
