--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
     <artifactId>config</artifactId>
-    <version>3.0.8-SNAPSHOT</version>
+    <version>3.0.8</version>
     <packaging>pom</packaging>
     <description>Maven projekt-archetype for UnionVms modules</description>
 
@@ -101,7 +101,7 @@
 
     <scm>
         <connection>scm:git:https://github.com/UnionVMS/UVMS-ConfigModule-APP.git</connection>
-      <tag>HEAD</tag>
+      <tag>config-3.0.8</tag>
   </scm>
 
   <modules>
