--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -13,8 +13,8 @@
     <packaging>ejb</packaging>
 
     
-    <!-- PROPERTIES USED FOR LOGBACK -->
     <properties>
+        <hibernate.dialect>org.hibernate.spatial.dialect.postgis.PostgisDialect</hibernate.dialect>
         <application.name>${project.parent.artifactId}</application.name>
         <application.version>${project.parent.version}</application.version>
         <application.logfile>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}.log</application.logfile>
