Include model and set new starting point 4.0.0 and enforce semantic

--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
         <artifactId>config</artifactId>
-        <version>3.0.14-SNAPSHOT</version>
+        <version>4.0.0-SNAPSHOT</version>
     </parent>
     
     <name>${project.parent.artifactId}-domain</name>
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>config-model</artifactId>
-            <version>${config.model.version}</version>
+            <version>${project.version}</version>
             <type>jar</type>
         </dependency>
     </dependencies>
