--- a/message/pom.xml
+++ b/message/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
         <artifactId>config</artifactId>
-        <version>3.0.14-SNAPSHOT</version>
+        <version>4.0.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>config-model</artifactId>
-            <version>${config.model.version}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
