--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
   </scm>
 
   <modules>
+  	<module>model</module>
   	<module>LIQUIBASE</module>
   	<module>domain</module>
     <module>rest</module>
