--- a/model/pom.xml
+++ b/model/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>jaxb2-basics</artifactId>
 			<version>0.9.5</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.6</version>
+		</dependency>		
 	</dependencies>
 
 	<repositories>
@@ -93,9 +98,8 @@
 										<bindingFile>${basedir}/src/main/resources/binding.xml</bindingFile>
 									</bindingFiles>
 									<extraargs>
-										<extraarg>-xjc-XhashCode</extraarg>
-										<extraarg>-xjc-Xequals</extraarg>
-										<extraarg>-xjc-XtoString</extraarg>
+										<extraarg>-xjc-Xcommons-lang</extraarg>
+										<extraarg>-xjc-Xcommons-lang:ToStringStyle=SHORT_PREFIX_STYLE</extraarg>										
 									</extraargs>
 								</wsdlOption>
 							</wsdlOptions>
@@ -115,9 +119,8 @@
 										<bindingFile>${basedir}/src/main/resources/binding.xml</bindingFile>
 									</bindingFiles>
 									<extraargs>
-										<extraarg>-xjc-XhashCode</extraarg>
-										<extraarg>-xjc-Xequals</extraarg>
-										<extraarg>-xjc-XtoString</extraarg>
+										<extraarg>-xjc-Xcommons-lang</extraarg>
+										<extraarg>-xjc-Xcommons-lang:ToStringStyle=SHORT_PREFIX_STYLE</extraarg>										
 									</extraargs>
 								</wsdlOption>
 							</wsdlOptions>
@@ -129,9 +132,9 @@
 				</executions>
 				<dependencies>
 					<dependency>
-						<groupId>org.jvnet.jaxb2_commons</groupId>
-						<artifactId>jaxb2-basics</artifactId>
-						<version>0.9.5</version>
+					    <groupId>org.jvnet.jaxb2_commons</groupId>
+					    <artifactId>jaxb2-commons-lang</artifactId>
+					    <version>2.4</version>
 					</dependency>
 				</dependencies>
 			</plugin>
