--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -103,7 +103,7 @@
 									<goal>stop</goal>
 								</goals>
 								<configuration>
-									<allContainers>false</allContainers>
+									<allContainers>true</allContainers>
 								</configuration>
 							</execution>
 							<execution>
