--- a/module/pom.xml
+++ b/module/pom.xml
@@ -40,7 +40,7 @@
                         </jarModule>
                         <webModule>
                             <groupId>${project.groupId}</groupId>
-                            <context-root>${project.parent.artifactId}</context-root>
+                            <context-root>${context.root}${project.parent.artifactId}</context-root>
                             <artifactId>config-rest</artifactId>
                         </webModule>
                     </modules>
