--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,9 @@
         <logback.version>1.2.3</logback.version>
         <logback.core.version>1.2.3</logback.core.version>
 
-        <usm4uvms.version>4.0.4</usm4uvms.version>
+        <usm4uvms.version>4.0.9</usm4uvms.version>
         <audit.model.version>4.0.0</audit.model.version>
-        <uvms.common.version>3.0.5</uvms.common.version>
+        <uvms.common.version>3.0.14-SNAPSHOT</uvms.common.version>
 
         <project.scm.id>github</project.scm.id>
     </properties>
@@ -53,7 +53,7 @@
 			<dependency>
 				<groupId>fish.focus.uvms.maven</groupId>
 				<artifactId>uvms-pom-monitoring-deps</artifactId>
-				<version>1.16</version>
+				<version>1.17-SNAPSHOT</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
