--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>fish.focus.uvms.maven</groupId>
 		<artifactId>uvms-pom</artifactId>
-		<version>1.17-SNAPSHOT</version>
+		<version>1.18</version>
 	</parent>
 
     <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
@@ -26,7 +26,7 @@
 
         <usm4uvms.version>4.0.9</usm4uvms.version>
         <audit.model.version>4.0.0</audit.model.version>
-        <uvms.common.version>3.0.14-SNAPSHOT</uvms.common.version>
+        <uvms.common.version>3.0.15</uvms.common.version>
 
         <project.scm.id>github</project.scm.id>
     </properties>
@@ -47,25 +47,25 @@
 			<dependency>
 				<groupId>fish.focus.uvms.maven</groupId>
 				<artifactId>uvms-pom-logging-deps</artifactId>
-				<version>1.16</version>
+				<version>1.18</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>fish.focus.uvms.maven</groupId>
 				<artifactId>uvms-pom-monitoring-deps</artifactId>
-				<version>1.17-SNAPSHOT</version>
+				<version>1.18</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>fish.focus.uvms.maven</groupId>
 				<artifactId>uvms-pom-test-deps</artifactId>
-				<version>1.16</version>
+				<version>1.18</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>fish.focus.uvms.maven</groupId>
 				<artifactId>uvms-pom-arquillian-deps</artifactId>
-				<version>1.16</version>
+				<version>1.18</version>
 				<type>pom</type>
 			</dependency>
         </dependencies>
