--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,9 @@
         <sl4j.version>1.7.25</sl4j.version>
         <logback.version>1.2.3</logback.version>
         <logback.core.version>1.2.3</logback.core.version>
-        <usm4uvms.version>4.0.13-SNAPSHOT</usm4uvms.version>
+        <usm4uvms.version>4.0.13</usm4uvms.version>
         <audit.model.version>4.0.10</audit.model.version>
-        <uvms.common.version>3.0.28</uvms.common.version>
+        <uvms.common.version>3.0.29</uvms.common.version>
         <project.scm.id>github</project.scm.id>
     </properties>
     <dependencies>
@@ -58,7 +58,7 @@
             <dependency>
                 <groupId>fish.focus.uvms.maven</groupId>
                 <artifactId>uvms-pom-test-deps</artifactId>
-                <version>1.18</version>
+                <version>1.21</version>
                 <type>pom</type>
             </dependency>
             <dependency>
