--- a/model/pom.xml
+++ b/model/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>eu.europa.ec.fisheries.uvms.config</groupId>
 		<artifactId>config</artifactId>
-		<version>4.0.14-SNAPSHOT</version>
+		<version>${uvms.config.module.version}</version>
 	</parent>
 
 	<artifactId>config-model</artifactId>
@@ -130,36 +130,6 @@
 					    <version>2.4</version>
 					</dependency>
 				</dependencies>
-			</plugin>
-			<plugin>
-				<groupId>com.github.siom79.japicmp</groupId>
-				<artifactId>japicmp-maven-plugin</artifactId>
-				<configuration>
-					<oldVersion>
-						<dependency>
-							<groupId>eu.europa.ec.fisheries.uvms.config</groupId>
-							<artifactId>config-model</artifactId>
-							<version>${config.api.check.against.version}</version>
-							<type>jar</type>
-						</dependency>
-					</oldVersion>
-					<newVersion>
-						<file>
-							<path>${project.build.directory}/${project.artifactId}-${project.version}.jar</path>
-						</file>
-					</newVersion>
-					<parameter>
-						<breakBuildOnBinaryIncompatibleModifications>true</breakBuildOnBinaryIncompatibleModifications>
-					</parameter>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>verify</phase>
-						<goals>
-							<goal>cmp</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 
 		</plugins>
