--- a/model/pom.xml
+++ b/model/pom.xml
@@ -34,6 +34,10 @@
 			<artifactId>uvms-pom-java11-deps</artifactId>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
+			<artifactId>uvms-commons-date</artifactId>
+		</dependency>
 	</dependencies>
 
 	<repositories>
