--- a/module/pom.xml
+++ b/module/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
         <artifactId>config</artifactId>
-        <version>4.3.10-SNAPSHOT</version>
+        <version>4.3.10</version>
     </parent>
 
     <properties>
